# dataframe-textual

./: .gitignore  FILTER_EXPRESSION_GUIDE.md  README.md  main.py  main_mre.py  main_no_tab.py  pyproject.toml
src/dataframe_textual/: __init__.py  __main__.py  commands.py  common.py  console_panel.py  data_frame_help_panel.py  data_frame_table.py  data_frame_viewer.py  file_picker.py  file_picker_screen.py  help_panel.py  keybindings.py  loading_screen.py  run_command_screen.py  sql_screen.py  status_bar.py  table_screen.py  text_screen.py  theme_screen.py  yes_no_screen.py
src/dataframe_viewer/: __init__.py  data_frame_table.py  data_frame_viewer.py
