[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataframe-viewer"
version = "0.1.0"
description = "Interactive CSV/Excel viewer for the terminal (Textual TUI)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.34.0",
    "rich>=14.2.0",
    "textual>=1.0.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

excel = [
    "fastexcel>=0.16.0",
    "xlsxwriter>=3.2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataframe_viewer"]

[project.scripts]
pk = "dataframe_viewer.data_frame_viewer:run"
