[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataframe-textual"
version = "2.37.0"
description = "Interactive terminal viewer/editor for tabular data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tiejun Cheng", email = "need47@gmail.com"}
]
keywords = ["csv", "excel", "terminal", "tui", "textual", "data-analysis", "polars", "interactive", "viewer", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.39.3",
    "fastexcel>=0.16.0",
    "xlsxwriter>=3.2.9",
    "textual[syntax]>=8.0.2",
    "vortex-data>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/need47/dataframe-textual"
Repository = "https://github.com/need47/dataframe-textual.git"
Documentation = "https://github.com/need47/dataframe-textual#readme"
"Bug Tracker" = "https://github.com/need47/dataframe-textual/issues"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataframe_textual"]
exclude = [
    "*.png",
    "*.gz",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "*.png",
    "*.gz",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[project.scripts]
dataframe-textual = "dataframe_textual.__main__:main"
dv = "dataframe_textual.__main__:main"
